# carbon_dioxide_sequestration

./: .gitignore  .gitignore_local  README.md
New files (cpp etc)/: Arbres.cpp  Arbres.h  Atmosphere.cpp  Atmosphere.h  CMakeLists.txt  Oceans.cpp  Sol.h  compartiments.cpp  compartiments.h  main.cpp  mon_exe  sim_history.csv
New files (cpp etc)/scripts/: CMakeLists.txt  compartiments.cpp  compartiments.h  main.cpp  main_example.cpp  test_eigen
New files (cpp etc)/scripts/compartiments/: Arbres.cpp  Arbres.h  Atmosphere.cpp  Compartiments.cpp  Compartiments.h  Humains.cpp  Humains.h  Oceans.cpp  Oceans.h  Sol.cpp  Sol.h  compartiments.h
New files (cpp etc)/scripts/methodes/: integration.cpp  integration.h  resolution.cpp  resolution.h
New files (cpp etc)/scripts/simulation/: simulation.cpp  simulation.h
Old files (python etc)/scripts/: estimations.py  script_ameliore_final.py  script_projet_CO2.py
